hphp/test/quick/record-param.php.expectf
int(11)

Catchable fatal error: Argument 1 passed to foo() must be an instance of Foo, Bar given in %s/record-param.php on line 21
